--- a/PFE/network_automation/les rôles/eigrp/modèles/eigrp.j2
+++ b/PFE/network_automation/les rôles/eigrp/modèles/eigrp.j2
@@ -1,1 +1,38 @@
-
+<config>
+  <native xmlns="http://cisco.com/ns/yang/Cisco-IOS-XE-native">
+    <router>  
+    {% if eigrps is defined %}
+      {% for eigrp in eigrps %}
+        <eigrp xmlns="http://cisco.com/ns/yang/Cisco-IOS-XE-eigrp">
+          <id> {{ eigrp["id"] }} </id>
+          <address-family>
+            <type>ipv4</type>
+              <af-ip-vrf-list>
+                  <vrf>{{ eigrp["vrf"] }}</vrf>
+                    <set-as-in-submode>
+                      <autonomous-system>200</autonomous-system>
+                    </set-as-in-submode>
+                    <network>
+                      <number>{{ eigrp["network"] }}</number>
+                        <wild-card>{{ eigrp["mask"] }}</wild-card>
+                    </network>
+                     <redistribute>
+                        <bgp>
+                           <rdr-as>{{ eigrp["bgp-as"] }}</rdr-as>
+                           <metric>
+                              <bandwith>1500</bandwith>
+                              <delay>100</delay>
+                              <reliability>255</reliability>
+                              <Effective>1</Effective>
+                              <mtu>1500</mtu>
+                           </metric>
+                        </bgp>
+                    </redistribute>
+                </af-ip-vrf-list>
+            </address-family>
+        </eigrp>
+      {% endfor %}
+    {% endif %}
+    </router>
+  </native>
+</config>
